# Osmos_Game

./: .gitignore  New.py  Osmos.py  README.md  ReadMe.txt  finalprojv2.py  interactions.py  keyboard.py  main.py  map.py  modules.py  pyproject.toml  settings.py  vector.py
Entities/: __init__.py  ball.py  enemy.py  mass.py  particles.py  player.py  power_ups.py
Game_Control/: Vector.py  __init__.py  interactions.py  keyboard.py
Game_Environment/: user_settings.py
Maps/: line.py  map.py
Resources/: BoungingInsideCircle.py  PixelCollidingWithLine.py
