[tool.poetry]
name = "Osmos"
version = "0.1.0"
description = "Osmos game"
authors = ["Maruf Bepary <bepary71@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mbeps/Osmos_Game"
repository = "https://github.com/mbeps/Osmos_Game"
keywords = ["game", "osmos"]

[tool.poetry.dependencies]
python = ">=3.10"
SimpleGUICS2Pygame = "^2.1.0"
mypy = "^1.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
include = [
    "LICENSE",
]